--- a/Exercises/01 - Handling data/Happiness.ipynb
+++ b/Exercises/01 - Handling data/Happiness.ipynb
@@ -1130,21 +1130,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12.030075187969924\n"
+      "11.851851851851853\n"
      ]
     }
    ],
    "source": [
     "# Write your code here\n",
-    "below_fifty = country_features[country_features.literacy < 50].literacy.count()\n",
-    "total =country_features.literacy.count()\n",
+    "below_fifty = len(country_features[country_features.literacy < 50])\n",
+    "total =len(country_features)\n",
     "print((below_fifty/total)*100)"
    ]
   },
@@ -1157,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
